fix searching flight for triptype